--- a/public/Dashboard/Clube/loja.html
+++ b/public/Dashboard/Clube/loja.html
@@ -241,29 +241,28 @@
         <!-- End of Topbar -->
 
         <!-- Begin Page Content -->
-        <div class="container-fluid">
+        <div class="container-fluid" style="max-width: 900px;">
 
           <!-- Portfolio Item Heading -->
-          <h1 class="my-4">Page Heading
-            <small>Secondary Text</small>
+          <h1 class="my-4">Loja
+            <small></small>
           </h1>
 
           <!-- Portfolio Item Row -->
           <div class="row">
 
             <div class="col-md-8">
-              <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+              <img class="img-fluid" src="/static/img/Loja/3.jpg" alt="dato de treino mourisquense">
             </div>
 
             <div class="col-md-4">
-              <h3 class="my-3">Project Description</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-              <h3 class="my-3">Project Details</h3>
+              <h3 class="my-3">Fato de Treino</h3>
+              <p>Fato de Treino original do Mourisquense. Confortavél e com grande qualidade para as diversas atividades do dia a dia.</p>
+              <h3 class="my-3">Detalhes</h3>
               <ul>
-                <li>Lorem Ipsum</li>
-                <li>Dolor Sit Amet</li>
-                <li>Consectetur</li>
-                <li>Adipiscing Elit</li>
+                <li>40€ sem descontos</li>
+                <li>35€ com desconto de sócio</li>
+                <li>Portes de envio grátis para Portugal Continental</li>
               </ul>
             </div>
 
@@ -271,31 +270,31 @@
           <!-- /.row -->
 
           <!-- Related Projects Row -->
-          <h3 class="my-4">Related Projects</h3>
+          <h3 class="my-4">Outros Produtos</h3>
 
           <div class="row">
 
             <div class="col-md-3 col-sm-6 mb-4">
               <a href="#">
-                    <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+                    <img class="img-fluid" src="/static/img/Loja/1.jpg" alt="">
                   </a>
             </div>
 
             <div class="col-md-3 col-sm-6 mb-4">
               <a href="#">
-                    <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+                    <img class="img-fluid" src="/static/img/Loja/5.jpg" alt="">
                   </a>
             </div>
 
             <div class="col-md-3 col-sm-6 mb-4">
               <a href="#">
-                    <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+                    <img class="img-fluid" src="/static/img/Loja/6.jpg" alt="">
                   </a>
             </div>
 
             <div class="col-md-3 col-sm-6 mb-4">
               <a href="#">
-                    <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+                    <img class="img-fluid" src="/static/img/Loja/4.jpg" alt="">
                   </a>
             </div>
 
