--- a/public/Dashboard/Clube/socios.html
+++ b/public/Dashboard/Clube/socios.html
@@ -241,29 +241,28 @@
         <!-- End of Topbar -->
 
         <!-- Begin Page Content -->
-        <div class="container-fluid">
+        <div class="container-fluid" style="max-width: 900px;">
 
           <section class="pricing py-5">
             <div class="container">
+              <div class="text-center mb-5 pb-3"><h1>Adira ao seu Pacote</h1></div>
               <div class="row">
                 <!-- Free Tier -->
                 <div class="col-lg-4">
                   <div class="card mb-5 mb-lg-0">
                     <div class="card-body">
-                      <h5 class="card-title text-muted text-uppercase text-center">Free</h5>
-                      <h6 class="card-price text-center">$0<span class="period">/month</span></h6>
+                      <h5 class="card-title text-muted text-uppercase text-center">Adepto</h5>
+                      <h6 class="card-price text-center">0€<span class="period">/mês</span></h6>
                       <hr>
                       <ul class="fa-ul">
-                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Single User</li>
-                        <li><span class="fa-li"><i class="fas fa-check"></i></span>5GB Storage</li>
-                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited Public Projects</li>
-                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Community Access</li>
-                        <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Unlimited Private Projects</li>
-                        <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Dedicated Phone Support</li>
-                        <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Free Subdomain</li>
-                        <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Monthly Status Reports</li>
+                        <li><span class="fa-li"><i class="fas fa-check"></i>                   </span>10 Pontos no Site</li>
+                        <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Sócio</li>
+                        <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Direito ao Voto</li>
+                        <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Descontos em Bilhetes</li>
+                        <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Descontos em Roupa</li>
+                        <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Descontos em Atividades</li>
                       </ul>
-                      <a href="#" class="btn btn-block btn-primary text-uppercase">Button</a>
+                      <a href="#" class="btn btn-block btn-dark text-uppercase">Aderir</a>
                     </div>
                   </div>
                 </div>
@@ -271,20 +270,18 @@
                 <div class="col-lg-4">
                   <div class="card mb-5 mb-lg-0">
                     <div class="card-body">
-                      <h5 class="card-title text-muted text-uppercase text-center">Plus</h5>
-                      <h6 class="card-price text-center">$9<span class="period">/month</span></h6>
+                      <h5 class="card-title text-muted text-uppercase text-center">Sócio</h5>
+                      <h6 class="card-price text-center">10€<span class="period">/mês</span></h6>
                       <hr>
                       <ul class="fa-ul">
-                        <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>5 Users</strong></li>
-                        <li><span class="fa-li"><i class="fas fa-check"></i></span>50GB Storage</li>
-                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited Public Projects</li>
-                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Community Access</li>
-                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited Private Projects</li>
-                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Dedicated Phone Support</li>
-                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Free Subdomain</li>
-                        <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Monthly Status Reports</li>
+                        <li><span class="fa-li"><i class="fas fa-check"></i>                   </span>1 Sócio</li>
+                        <li><span class="fa-li"><i class="fas fa-check"></i>                   </span>Direito ao Voto</li>
+                        <li><span class="fa-li"><i class="fas fa-check"></i>                   </span>500 Pontos no Site</li>
+                        <li><span class="fa-li"><i class="fas fa-check"></i>                   </span>Descontos em Bilhetes</li>
+                        <li><span class="fa-li"><i class="fas fa-check"></i>                   </span>Descontos em Roupa</li>
+                        <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Descontos em Atividades</li>
                       </ul>
-                      <a href="#" class="btn btn-block btn-primary text-uppercase">Button</a>
+                      <a href="#" class="btn btn-block btn-dark text-uppercase">Aderir</a>
                     </div>
                   </div>
                 </div>
@@ -292,20 +289,18 @@
                 <div class="col-lg-4">
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title text-muted text-uppercase text-center">Pro</h5>
-                      <h6 class="card-price text-center">$49<span class="period">/month</span></h6>
+                      <h5 class="card-title text-muted text-uppercase text-center">Sócios VIP</h5>
+                      <h6 class="card-price text-center">40€<span class="period">/mês</span></h6>
                       <hr>
                       <ul class="fa-ul">
-                        <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>Unlimited Users</strong></li>
-                        <li><span class="fa-li"><i class="fas fa-check"></i></span>150GB Storage</li>
-                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited Public Projects</li>
-                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Community Access</li>
-                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Unlimited Private Projects</li>
-                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Dedicated Phone Support</li>
-                        <li><span class="fa-li"><i class="fas fa-check"></i></span><strong>Unlimited</strong> Free Subdomains</li>
-                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Monthly Status Reports</li>
+                        <li><span class="fa-li"><i class="fas fa-check"></i>                   </span>5 Sócio</li>
+                        <li><span class="fa-li"><i class="fas fa-check"></i>                   </span>Direito ao Voto</li>
+                        <li><span class="fa-li"><i class="fas fa-check"></i>                   </span>500 Pontos no Site</li>
+                        <li><span class="fa-li"><i class="fas fa-check"></i>                   </span>Descontos em Bilhetes</li>
+                        <li><span class="fa-li"><i class="fas fa-check"></i>                   </span>Descontos em Roupa</li>
+                        <li><span class="fa-li"><i class="fas fa-check"></i>                   </span>Descontos em Atividades</li>
                       </ul>
-                      <a href="#" class="btn btn-block btn-primary text-uppercase">Button</a>
+                      <a href="#" class="btn btn-block btn-dark text-uppercase">Aderir</a>
                     </div>
                   </div>
                 </div>
